--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 base64 = "0.21.5"
+rand = "0.8.5"
