--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "purple_cello_reverse_proxy"
 version = "0.1.0"
 edition = "2021"
+description = "A reverse proxy for the Purple Cello Minecraft Server."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
